2004-09-13 nalin
	* src/tokens.c: skip getting tokens for the cell of /afs if that cell
	is "dynroot", which is what OpenAFS's dynamic-root support gives us.
	* src/auth.c: run the krb5_kuserok() check in the authentication phase
	as well (Douglas E. Engert).

2004-09-02 nalin
	* src/minikafs.c: add copyright statement because the ioctl patch is
	too much like heimdal's implementation.

2004-08-31 nalin
	* src/shmem.c,src/shmem.h: add, several functions for handling shared
	memory.
	* src/auth.c:(pam_sm_authenticate): log the realm as well. store
	credentials to shared memory on success if the "use_shmem" flag was
	given, or if "use_shmem=" lists the current service, or is true.
	* src/stash.c:(_pam_krb5_stash_shm_read,_pam_krb5_stash_shm_write): add.
	* src/storetmp.c(_pam_krb5_read_with_retry): make non-static.
	* src/storetmp.c(_pam_krb5_storetmp_file): add a hook for storing a copy
	of the file contents in a blob of memory.

2004-08-31 nalin
	* src/password.c(pam_sm_chauthtok): during the preliminary check phase,
	read the current password as the PAM_OLDAUTHTOK item, not PAM_AUTHTOK
	(Ludek Finstrle, #131246)

2004-08-27 nalin
	* src/userinfo.c(_pam_krb5_user_info_init): override the realm name to
	be the one which was passed in (Carlos A. Villegas, #116198).

2004-08-27 nalin
	* src/minikafs.c: handle cases where the length of the realm name >
	length of the cell name.

2004-08-27 nalin
	* src/options.c(_pam_krb5_options_init): set the default realm for
	ctx (#116198).

2004-08-26 nalin
	* src/options.h,options.c: add an ignore_afs flag to the options
	structure, heavily based on Matthew Miller's patch (#126345).
	* auth.c, session.c, sly.c: obey ignore_afs.

2004-08-26 nalin
	* src/acct.c(pam_sm_acct_mgmt): skip .k5login check of user_check was
	disabled -- it's not as if we can expect an unknown user to have a home
	directory.

2004-08-26 nalin
	* src/conv.c(_pam_krb5_conv_call): return PAM_BAD_ITEM instead of