@@ -42,7 +42,7 @@ rm -f $RPM_BUILD_ROOT/%{_lib}/security/*.la
 
 # $Id$
 %changelog
-* Tue Aug 31 2004 Nalin Dahyabhai <nalin@redhat.com> - 2.2.0-1
+* Tue Feb  8 2005 Nalin Dahyabhai <nalin@redhat.com> - 2.2.0-1
 - update to 2.2.0
 
 * Mon Aug 30 2004 Nalin Dahyabhai <nalin@redhat.com> - 2.1.2-1
